# jira-agile-metrics

./: .cursorrules  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint.yml  Dockerfile  Dockerfile.batch  Dockerfile.develop  Dockerfile.webapp  LICENSE.md  Makefile  README.md  cycletime.json  docker-compose.yml  mise.toml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run.sh  setup.py  task.py
.cursor/: README.md  api.md  architecture.md  development.md  overview.md  patterns.md  testing.md
.github/workflows/: lint.yml  test.yml
jira_agile_metrics/: __init__.py  calculator.py  calculator_test.py  chart_styling_utils.py  chart_styling_utils_test.py  cli.py  cli_test.py  columns.py  common_constants.py  config.py  config_main.py  config_test.py  conftest.py  jira_client.py  jira_client_test.py  querymanager.py  querymanager_test.py  test_classes.py  test_data.py  test_data_factory.py  test_file_jira_client.py  test_utils.py  trello.py  trello_test.py  utils.py  utils_test.py
jira_agile_metrics/calculators/: ageingwip.py  ageingwip_test.py  base_calculator.py  bottleneck_charts_calculator.py  bottleneck_charts_test.py  burnup.py  burnup_chart_generator.py  burnup_chart_generator_test.py  burnup_chart_types.py  burnup_chart_utils.py  burnup_chart_utils_test.py  burnup_test.py  cfd.py  cfd_test.py  cycletime.py  cycletime_test.py  debt.py  debt_test.py  defects.py  defects_test.py  forecast.py  forecast_test.py  forecast_utils.py  forecast_utils_test.py  forecast_validator.py  histogram.py  histogram_test.py  impediments.py  impediments_test.py  impediments_utils.py  monte_carlo_simulator.py  netflow.py  netflow_test.py  percentiles.py  percentiles_test.py  progressreport.py  progressreport_forecasting.py  progressreport_forecasting_test.py  progressreport_models.py  progressreport_plotting.py  (+20 more)
jira_agile_metrics/config/: __init__.py  exceptions.py  loader.py  progress_report_utils.py  type_utils.py  yaml_utils.py
jira_agile_metrics/tests/: test_throughput_sampler.py
jira_agile_metrics/tests/e2e/: e2e_config.py  e2e_helpers.py  e2e_imports.py  regenerate_expected_fixtures.py  test_cli_e2e.py  validate_e2e_outputs.py
jira_agile_metrics/tests/fixtures/expected/: burnup-forecast.csv  cfd.csv  cycletime.csv  histogram.csv  impediments.csv  percentiles.csv  scatterplot.csv  throughput.csv
jira_agile_metrics/tests/fixtures/jira/: fields.json  search_issues.json
jira_agile_metrics/tests/functional/: conftest.py  generate_expected_forecast_csv.py  test_burnup_forecast_chart_functional.py  test_burnup_forecast_functional.py  test_burnup_functional.py  test_cfd_functional.py  test_cycletime_functional.py  test_histogram_functional.py  test_impediments_functional.py  test_percentiles_functional.py  test_scatterplot_functional.py  test_throughput_functional.py
jira_agile_metrics/tests/helpers/: assertions.py  csv_utils.py  dataframe_utils.py
jira_agile_metrics/webapp/: app.py  app_test.py  helpers.py  helpers_test.py  test_utils.py
jira_agile_metrics/webapp/templates/: bokeh_chart.html  burnup_forecast.html  index.html  layout.html
scripts/: check_makefile.py
