[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.ruff]
line-length = 88
exclude = [".venv", "venv", "env", "build", "dist", "__pycache__"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-agile-metrics"
version = "0.25"
description = "Agile metrics and summary data extracted from JIRA"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
testing = [
    "pytest>=8.4.2",
    "pytest-mock",
    "mock",
]

[tool.coverage.run]
omit = [
    "*/tests/functional/*",
    "*/test_file_jira_client.py",
    "setup.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')",
]